# pitchoune

./: README.md  main.py  minimal_example.py  requirements.txt  setup.cfg  truc.py
.github/workflows/: pypi-publish.yml  python-publish.yml
data/: cities.csv  people.csv
examples/: chat_example.py  custom_io_example.py  human_check_example.py  multiple_outputs.py
pitchoune/: chat.py  dataset.py  decorators.py  factory.py  functions.py  injector.py
pitchoune/chats/: openai_chat.py
pitchoune/ios/: xlsm_io.py
tests/: test_dataset.py  test_end_to_end.py  test_functions.py
