[metadata]
name = pitchoune
version = 0.6.0
author = Pierre-Emmanuel Brian
description = A minimal framework to transform data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pe-brian/pitchoune
project_urls =
    Bug Tracker = https://github.com/pe-brian/pitchoune/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    prettytable == 3.10.0
    typeguard == 4.3.0
    chocolatine == 0.88.5

[options.packages.find]
where = src